# MissionForge

./: .gitignore  INSTRUKCJA.md  README.md  pyproject.toml  run_server.py
.history/: INSTRUKCJA_20260317090015.txt  INSTRUKCJA_20260317090807.txt  INSTRUKCJA_20260317094543.txt  ZapisRozmowyNieOtwierac_20260317034420.md  ZapisRozmowyNieOtwierac_20260317034432.md  ZapisRozmowyNieOtwierac_20260317034450.md  ZapisRozmowyNieOtwierac_20260317034511.md  ZapisRozmowyNieOtwierac_20260317034515.md
arma3_mgen/: __init__.py  __main__.py  cli.py  config_loader.py  config_schema.py  mission_builder.py
arma3_mgen/data/: arma3_reference.json  db_behaviors_missions.json  db_units_vehicles.json  locations.json  maps.json  markers.json  sqf_knowledge.md  wiki_docs.txt  wiki_docs2.txt  wiki_eden.txt
arma3_mgen/data/factions/: cup_russia.json  cup_takistani.json  cup_us_army.json  rhs_insurgents.json  rhs_msv.json  rhs_usarmy.json  rhs_usmc.json  rhs_vdv.json  vanilla_csat.json  vanilla_nato.json
arma3_mgen/generators/: briefing.py  description_ext.py  init_player_local.py  init_server.py  init_sqf.py  mission_folder.py  mission_sqm.py  respawn.py  sqf_modules.py
arma3_mgen/sqm/: id_manager.py  writer.py
configs/: full_test.json  minimal_altis.json
tests/: test_sqm_validation.py
web/: app.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
