[project]
name = "arma3-mission-generator"
version = "0.1.0"
description = "IBC ARMA 3 Automatic Mission Generator Framework"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart",
]

[project.scripts]
arma3-mgen = "arma3_mgen.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
